--- a/src/Component/Login.css
+++ b/src/Component/Login.css
@@ -1,8 +1,10 @@
 /* src/components/Login.css */
+
+
 .login-container {
-    max-width: 300px;
+    max-width: 500px;
     margin: 0 auto;
-    padding: 20px;
+    padding: 20px 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
